--- a/WPF/PokemonTeste/MainWindow.xaml
+++ b/WPF/PokemonTeste/MainWindow.xaml
@@ -15,11 +15,11 @@
             <Button Command="{Binding adicionar}" Margin="3" Padding="3" Content="Novo"/>
             <Button Command="{Binding editar}" Margin="3" Padding="3" Content="Editar"/>
             <Button Command="{Binding apagar}" Margin="3" Padding="3" Content="Deletar"/>
-            <TextBox Text="{Binding PokemonPreenchido.Id}" Margin="3" Padding="3" Width="100"/>
+            <!--<TextBox Text="{Binding PokemonPreenchido.Id}" Margin="3" Padding="3" Width="100"/>
             <TextBox Text="{Binding PokemonPreenchido.Nome}" Margin="3" Padding="3" Width="100"/>
             <TextBox Text="{Binding PokemonPreenchido.Apelido}" Margin="3" Padding="3" Width="100"/>
             <TextBox Text="{Binding PokemonPreenchido.Nivel}" Margin="3" Padding="3" Width="100"/>
-            <TextBox Text="{Binding PokemonPreenchido.Tipo}" Margin="3" Padding="3" Width="100"/>
+            <TextBox Text="{Binding PokemonPreenchido.Tipo}" Margin="3" Padding="3" Width="100"/>-->
             <!--<Button Click="ButtonClicked" Margin="3" Padding="3" Content="Nova Página"/>-->
         </StackPanel>
         <ScrollViewer Grid.Row="1"
